--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -1,1 +1,24 @@
 
+name: Sync with Upstream
+
+on:
+  schedule:
+    - cron: '0 0 * * *'  # This runs every day at midnight UTC. Adjust the cron schedule as needed.
+
+jobs:
+  sync-with-upstream:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Sync with Upstream
+        uses: derjust/sync-fork@v1.0.0
+        with:
+          upstream: 'jackocnr/intl-tel-input'  # Replace <upstream-repo> with the full name of the upstream repository, e.g., 'owner/repo'
+          branch: 'master'  # Replace 'main' with the branch you want to sync
+
+      - name: Push Changes
+        uses: ad mannon /push@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
