--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -3,6 +3,7 @@ name: Sync with Upstream
 on:
   schedule:
     - cron: '0 0 * * *'  # This runs every day at midnight UTC. Adjust the cron schedule as needed.
+  workflow_dispatch:
 
 jobs:
   sync-with-upstream:
