--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   sync-with-upstream:
-    runs-on: ubuntu-latest  # The runner to use
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2  # Checkout the repository
